# curso-fastapi

./: .gitignore
introducao/: async_await_overview.py  async_await_sponge_bob.py  pydantic_overview.py  pyproject.toml
projeto1/: converter.py  main.py  pyproject.toml  routers.py  schemas.py
