[project]
name = "introducao-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "tiagobernard"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
